objects/Media_Bucket_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Bucket__c</fullName>
        <label>Media Bucket</label>
        <referenceTo>Media_Bucket__c</referenceTo>
        <relationshipLabel>Media Bucket Items</relationshipLabel>
        <relationshipName>Media_Bucket_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Media_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Discount</label>
        <referenceTo>Media_Discount__c</referenceTo>
        <relationshipLabel>Media Bucket Items</relationshipLabel>
        <relationshipName>Media_Bucket_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Product__c</fullName>
        <label>Media Product</label>
        <referenceTo>Media_Product__c</referenceTo>
        <relationshipLabel>Media Bucket Items</relationshipLabel>
        <relationshipName>Media_Bucket_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Media Bucket Item</label>
    <nameField>
        <displayFormat>BUCKET_I-{0000000}</displayFormat>
        <label>Media Bucket Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Bucket Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>